# discord-plex-announcer

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  debug_start.py  docker-compose.deploy.yml  docker-compose.yml  healthcheck.py  main.py  plex_announcer.py  plex_discord_bot.py  pyproject.toml  requirements.txt  run.py  setup.py  start.sh  test_connection.py  test_plex_bot.py  test_webhook_server.py
.github/workflows/: docker-build.yml
plex_announcer/: __init__.py  __main__.py  cli.py
plex_announcer/core/: __init__.py  discord_bot.py  plex_monitor.py  webhook_server.py
plex_announcer/tests/: __init__.py  test_plex_monitor.py  test_utils.py
plex_announcer/utils/: __init__.py  config.py  embed_builder.py  formatting.py  healthcheck.py  logging_config.py  media_storage.py
